syntax = "proto3";
package nicopernas.chat.chat;

import "gogoproto/gogo.proto";
import "chat/params.proto";
import "chat/next_message_id.proto";
import "chat/message.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/nicopernas/chat/x/chat/types";

// GenesisState defines the chat module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  string port_id = 2;
  NextMessageId nextMessageId = 3;
  repeated Message messageList = 4 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
}
